simple-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-echo-svc
  labels:
    app: simple-echo
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30050
  selector:
    app: simple-echo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simple-echo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-echo
    spec:
      containers:
        - name: simple-echo
          image: cgrant/simple-echo-server
          readinessProbe:
            httpGet:
              path: /test2
              port: 80
          ports:
            - containerPort: 80
