nginx-static-ip-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "public-static-api"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: chatauth.api.indiraactive.com # smooch-jwt
    http:
      paths:
      - path: /
        backend:
          serviceName: smooch-jwt
          servicePort: 8080
